--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,16 +1,22 @@
 site_name: mrpwei.github.io
 theme:
   name: material
-  plugins:
-    - search:
-        - en
-        - ja
+  language: zh
   palette:
     primary: teal
-  language: zh
+  icon:
+    edit: material/pencil
   features:
     - navigation.instant
-    - navigation.tabs
-    - navigation.tabs.sticky
     - navigation.sections
     - navigation.top
+    - search.suggest
+    - search.highlight
+edit_uri: edit/master/docs/
+plugins:
+  - search: # 现在还不支持中文搜索 支持之后可以设置语言
+      # insider已经支持中文的分词搜索了 https://squidfunk.github.io/mkdocs-material/blog/2022/chinese-search-support/
+      lang:
+        - en
+        - ja
+  - tags # 给单篇文章添加标签 https://squidfunk.github.io/mkdocs-material/setup/setting-up-tags/?h=tags
