--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
-site_name: mrpwei.github.io
+site_name: Peng.Wei
+site_author: Peng Wei
+site_description: 彭伟的个人网站
 site_url: https://mrpwei.github.io
 repo_url: https://github.com/mrpwei/mrpwei.github.io
 theme:
@@ -6,6 +8,8 @@ theme:
   language: zh
   palette:
     primary: teal
+  logo: images/hammer.svg
+  favicon: images/hammer.svg
   icon:
     edit: material/pencil
   features:
@@ -30,3 +34,8 @@ plugins:
       height: auto
       zoomable: true
       draggable: true
+markdown_extensions:
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
