--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,3 +39,14 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.critic # https://squidfunk.github.io/mkdocs-material/reference/formatting/
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
+  - admonition # https://squidfunk.github.io/mkdocs-material/reference/admonitions/
+  - pymdownx.details
